--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <title>437</title>
 </head>
 <body>
+    <div class="wrapper">
+        <div class="app">
+            <input class="app__search" type="text" placeholder="Введите репозиторий...">
+            <div class="app__result">123 123 123</div>
+            <div class="app__result">123 123 123</div>
+            <div class="app__result">123 123 123</div>
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
