--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
 <body>
     <div class="wrapper">
         <div class="app">
-            <input class="app__search" type="text" placeholder="Введите репозиторий...">
+            <input class="app__input" type="text" placeholder="Введите репозиторий...">
+            <div class="app__search">123123</div>
+            <div class="app__search">123123</div>
+            <div class="app__search">123123</div>
+            <div class="app__search">12312</div>
+            <div class="app__search">123123</div>
             <div class="app__result">123 123 123</div>
             <div class="app__result">123 123 123</div>
             <div class="app__result">123 123 123</div>
