--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
             <div class="app__search">123123</div>
             <div class="app__search">12312</div>
             <div class="app__search">123123</div>
+            <!-- <div class="app__result">123 123 123</div>
             <div class="app__result">123 123 123</div>
-            <div class="app__result">123 123 123</div>
-            <div class="app__result">123 123 123</div>
+            <div class="app__result">123 123 123</div> -->
         </div>
     </div>
     <script src="script.js"></script>
