--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
     <div class="wrapper">
         <div class="app">
             <input class="app__input" type="text" placeholder="Введите репозиторий...">
-            <div class="app__search">123123</div>
+            <!-- <div class="app__search">123123</div>
             <div class="app__search">123123</div>
             <div class="app__search">123123</div>
             <div class="app__search">12312</div>
-            <div class="app__search">123123</div>
+            <div class="app__search">123123</div> -->
             <!-- <div class="app__result">123 123 123</div>
             <div class="app__result">123 123 123</div>
             <div class="app__result">123 123 123</div> -->
-            <ul id="ul"></ul>
+            <!-- <ul id="ul"></ul> -->
         </div>
     </div>
     <script src="script.js"></script>
