--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <div class="wrapper">
         <div class="app">
             <input class="app__input" type="text" placeholder="Введите репозиторий...">
+            <!-- <div class="app-search"></div>
+            <div class="app-result"></div> -->
         </div>
     </div>
     <script src="script.js"></script>
