--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <div class="wrapper">
         <div class="app">
             <input class="app__input" type="text" placeholder="Введите репозиторий...">
-            <!-- <div class="app-search"></div>
-            <div class="app-result"></div> -->
         </div>
+        <div class="result"></div>
+       
     </div>
     <script src="script.js"></script>
 </body>
